--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "sir-project",
+  "name": "aim",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "backend/index.js",
   "type": "module",
   "scripts": {
-    "backend": "NODE_ENV=development nodemon backend/index.js",
-    "frontend": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
-    "build":"npm install && npm install --prefix frontend  && npm run build --prefix frontend",
-    "start":"NODE_ENV=production node backend/index.js"
-
+    "frontend": "npm run dev --prefix frontend",
+    "backend": "nodemon backend/index.js",
+    "build": "npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend",
+    "start": "node backend/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -27,7 +24,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.10.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.9"
   }
 }
